<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>Compare</class>
 <widget class="QDialog" name="Compare">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>400</width>
    <height>300</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Dialog</string>
  </property>
  <layout class="QGridLayout" name="gridLayout">
   <item row="0" column="0">
    <widget class="QCustomPlot" name="currentPlot" native="true"/>
   </item>
   <item row="0" column="1">
    <widget class="QCustomPlot" name="comparePlot1" native="true"/>
   </item>
   <item row="1" column="0">
    <widget class="QCustomPlot" name="comparePlot2" native="true"/>
   </item>
   <item row="1" column="1">
    <widget class="QCustomPlot" name="comparePlot3" native="true"/>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>QCustomPlot</class>
   <extends>QWidget</extends>
   <header>qcustomplot.h</header>
   <container>1</container>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections/>
</ui>
